[project]
name = "tugas-akhir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.3.0",
    "cython>=3.0.12",
    "cython-bbox>=0.1.5",
    "dotenv>=0.9.9",
    "jupyterlab>=4.4.2",
    "lap>=0.5.12",
    "opencv-python>=4.11.0.86",
    "pika>=1.3.2",
    "pip>=25.1.1",
    "pynvml>=12.0.0",
    "ultralytics>=8.3.124",
    "v>=1",
]
